# chris_scripts

./: 10.workspace_setup_scripts.sh.em  CMakeLists.txt  README.md  package.xml
scripts/danger/: README.md  clean.sh
scripts/helper/: README.md  chris_status.sh  chris_update.sh  log_params.py  plot_bag_odom.py  plot_turtlebot_bag.py  record_desktop.sh
